fix: fix strip on mobile version (3.04.2023 20:35)

--- a/shelter/styles/about.css
+++ b/shelter/styles/about.css
@@ -72,7 +72,7 @@
   }
 
   .about-wrapper {
-    margin: 42px 0 0 1px;
+    margin: 42px 0 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
